--- a/views/index/index_student.ejs
+++ b/views/index/index_student.ejs
@@ -86,7 +86,8 @@
                                 </svg><b> Join Class</b>
                             </button>
                             
-                        <% } %>
+                        <% } %> <br><br>
+                        <p>ติดต่ออาจารย์ผู้สอน : <a href="mailto:<%= result[0].teacher %>"><%= result[0].teacherName %></a></p>
                 </div>    
 <!-- 
                 <div class="item1" style="width: auto;">
