--- a/views/student/question.ejs
+++ b/views/student/question.ejs
@@ -1,129 +1,16 @@
-<!doctype html>
-<html lang="en">
-
-<head>
-    <!-- Required meta tags -->
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-
-    
-    <style>
-        .bd-placeholder-img {
-            font-size: 1.125rem;
-            text-anchor: middle;
-            -webkit-user-select: none;
-            -moz-user-select: none;
-            user-select: none;
-        }
-        .group2 {
-            display: grid;
-            grid-template-columns: 50% 50%;
-            padding: 10px;
-        }
-        a.DrawIo {
-            color: black;
-            text-decoration: none;
-            background-color: #d27700;
-            padding-top: 15px;
-            height: 60px;
-            width: 600px;
-            text-align: center;
-        }
-
-        @media (min-width: 768px) {
-            .bd-placeholder-img-lg {
-                font-size: 3.5rem;
-            }
-        }
-    </style>
-
-    
-    <link rel='stylesheet' href='stylesheets/compiler_line.css' />
-
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.5.0/Chart.min.js"></script>
-    <title>Ticket Booking System</title>
-</head>
-
-<body>
-
-<br><br><br>
-    <div id = "content" class="container">
-
-<form action="/question/submit" method="post" autocomplete="off" > 
-
-        <%# LV4 %>                
 
 
-        <br><h3>Approach</h3>
-            <p>Flowchart ใช้ draw.io (30 คะแนน)</p>
-            <textarea class="form-control" style="height: 100px;" rows="4" cols="30" name="sendLink16" required></textarea>
-        
-        <br><div class="form-group" >
-            <h3>Deployment</h3>
-            <p>Source Code ที่เขียนขึ้น (50 คะแนน)</p>
-            <textarea  class="form-control"  name="code" rows="10" required></textarea>
-        </div>
-        
 
-        <br><h3>Result</h3>
-            <p>แสดงผลลัพธ์ของโปรแกรม (10 คะแนน) </p>
-            <textarea class="form-control" style="height: 100px;" rows="4" name="expResult16" cols="50"></textarea>
-        <br><h3>Improvement</h3>
-            <p>ตอบคำถาม (10 คะแนน) </p>
-            <p>โจทย์คำถาม ถ้าต้องการแสดงข้อมูล ที่อยู่ ของผู้จอง ตั้งแต่บ้านเลขที่ หมู่ที่ ตำบล อำเภอ จังหวัด และรหัสไปรษณีย์ ต้องใช้คำสั่งใดในการรับค่าของข้อมูลนี้</p>
-            <textarea class="form-control" style="height: 150px;" rows="4" name="expResult17" cols="50"></textarea>
-    <br>
-        
-   
-
-        Language : <select name="lang"><option value="C">C</option></select>
-        
-        <div class="d-grid gap-2">
-            <br>
-            <button type="button" class="btn btn-outline-dark" data-bs-toggle="modal" data-bs-target="#staticBackdrop" >
-                ส่งคำตอบ
-            </button>
-        </div>
-        <!-- Modal Submit -->        
-        <div class="modal fade" id="staticBackdrop" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
-            <div class="modal-dialog modal-dialog-centered">
-                <div class="modal-content">
-                    <div class="modal-header">
-                    <h5 class="modal-title" id="staticBackdropLabel">ส่งคำตอบ</h5>
-                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-                    </div>
-                    <div class="modal-body">
-                    คุณต้องการส่งคำตอบใช่หรือไม่ ?
-                        <div id="emailHelp" class="form-text">หากยังทำโจทย์ไม่ครบ จะไม่สามารถกดส่งได้ </div>
-                    </div>
-                    <div class="modal-footer">
-                        <button type="button" class="btn btn-outline-secondary" data-bs-dismiss="modal">ไม่</button>
-                        <button type="submit" class="btn btn-dark" value="Submits" id="check" name="check">ใช่</button>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <br>
-        <!-- Modal CODE -->        
-        <div class="modal fade" id="staticBackdrop2" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
-            <div class="modal-dialog modal-dialog-centered">
-                <div class="modal-content">
-                    <div class="modal-header">
-                        <h5 class="modal-title" id="staticBackdropLabel">Online compiler</h5>
-                        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-                    </div>
-                    <div class="modal-body">
-                        <iframe src="https://www.programiz.com/c-programming/online-compiler/" width="100%" height="500px"></iframe>
-                    </div>   
-                    <div class="modal-footer">
-                    <button type="button" class="btn btn-danger btn-lg btn-block" data-bs-dismiss="modal">ปิด</button>
-                    </div>
-                </div>
-            </div>
-        </div>
+<%# START %> 
+<form action="/question/submit" method="post" autocomplete="off" >
+    <textarea class="" placeholder="คำถาม" style="width: 300px;" rows="3" cols="10" name="question" required></textarea>
+    <%# SUBMIT %> 
+    <!-- Button trigger modal -->
+    <div class="">
+        <button type="submit" class="btn btn-dark" value="Submits" id="check" name="check">Send</button>
     </div>
-</form>
-<script src="javascripts/compilerStyle.js"></script>
-</body>
+</form> 
 
-</html>
+<%# END %> 
+
+
