project quiz Check

--- a/views/student/project/1_TicketBookingSystem.ejs
+++ b/views/student/project/1_TicketBookingSystem.ejs
@@ -48,7 +48,7 @@
     <!-- Narbar-->
     <%- include('../layouts/navbar') %>
     <!-- end of Narbar-->
-
+ 
 <br><br><br>
     <div id = "content" class="container">
 
@@ -75,21 +75,19 @@
             <p>Flowchart ใช้ draw.io (30 คะแนน)</p>
             <textarea class="form-control" style="height: 100px;" rows="4" cols="30" name="sendLink16" required></textarea>
         
-        <br><div class="form-group" >
-            <h3>Deployment</h3>
+        <br><h3>Deployment</h3>
             <p>Source Code ที่เขียนขึ้น (50 คะแนน)</p>
-            <textarea  class="form-control"  name="code" rows="10" required></textarea>
-        </div>
-        
+            <textarea  class="form-control"  name="code" rows="10" required></textarea>     
 
         <br><h3>Result</h3>
             <p>แสดงผลลัพธ์ของโปรแกรม (10 คะแนน) </p>
             <textarea class="form-control" style="height: 100px;" rows="4" name="expResult16" cols="50"></textarea>
+        
         <br><h3>Improvement</h3>
             <p>ตอบคำถาม (10 คะแนน) </p>
             <p>โจทย์คำถาม ถ้าต้องการแสดงข้อมูล ที่อยู่ ของผู้จอง ตั้งแต่บ้านเลขที่ หมู่ที่ ตำบล อำเภอ จังหวัด และรหัสไปรษณีย์ ต้องใช้คำสั่งใดในการรับค่าของข้อมูลนี้</p>
             <textarea class="form-control" style="height: 150px;" rows="4" name="expResult17" cols="50"></textarea>
-    <br>
+        <br>
         
    
 
