--- a/views/teacher/checkQuiz.ejs
+++ b/views/teacher/checkQuiz.ejs
@@ -103,51 +103,51 @@
                           </script>
 
 
-                        <iframe src=" https://drive.google.com/file/d/1PpWrOPCdhHaGmN-OWPOpa4aYoqvlZeAq/preview " width="100%" height="600px" allow="autoplay"></iframe>
+                        <iframe src="<%= student[0].ADRI %> " width="100%" height="600px" allow="autoplay"></iframe>
 
-                        <span class="input-group-text"><b>Approach</b></span>
+                        <span class="input-group-text"><b>Approach:</b>&ensp;<%= student[0].ADRI1 %></span>
                             <div class="col-sm"> 
                                 <div class="card-body shadow rounded">
                                     <textarea style="height: 100%" class="form-control" name="code" rows="5" ><%= student[0].sendLink16%></textarea>
                                     <br>
                                 </div>
-                                <input class="form-check-input" style="width: 100px; height: 40px;" type="number" min="0" max="3" step="0.5" name="studentScore1" id="studentScore" value="" placeholder="ข้อ 16.1">
+                                <input class="form-check-input" style="width: 100px; height: 40px;" type="number" min="0" max="30" step="0.5" name="studentScore1" id="studentScore" value="" placeholder="30 คะแนน">
                             </div>
 
 
                         <br>
                         
-                        <span class="input-group-text"><b>Deployment</b></span>               
+                        <span class="input-group-text"><b>Deployment:</b>&ensp;<%= student[0].ADRI2 %></span>               
                         <div class="col-sm"> 
                             <div class="card-body shadow rounded group2">
                                 <textarea style="height: 100%" class="form-control" name="code" rows="10" ><%= student[0].code%></textarea>
                                 <iframe src="https://www.programiz.com/c-programming/online-compiler/" width="100%" height="600px"></iframe> 
                             </div>
-                            <input class="form-check-input" style="width: 100px; height: 40px;" type="number" min="0" max="3" step="0.5" name="studentScore2" id="studentScore" value="" placeholder="ข้อ 17.1">
+                            <input class="form-check-input" style="width: 100px; height: 40px;" type="number" min="0" max="50" step="0.5" name="studentScore2" id="studentScore" value="" placeholder="50 คะแนน">
                         </div>
  
 
 
                     <br>
-                    <span class="input-group-text"><b>Result</b></span>
+                    <span class="input-group-text"><b>Result:</b>&ensp;<%= student[0].ADRI3 %></span>
                     <div class="col-sm"> 
                         <div class="card-body shadow rounded">
                             <textarea style="height: 100%" class="form-control" name="code" rows="5" ><%= student[0].expResult16%></textarea>
                             <br>
                         </div>
-                        <input class="form-check-input" style="width: 100px; height: 40px;" type="number" min="0" max="3" step="0.5" name="studentScore3" id="studentScore" value="" placeholder="ข้อ 18.1">
+                        <input class="form-check-input" style="width: 100px; height: 40px;" type="number" min="0" max="10" step="0.5" name="studentScore3" id="studentScore" value="" placeholder="10 คะแนน">
                     </div>
     
 
                 
                 <br>
-                <span class="input-group-text"><b>Improvement</b></span>
+                <span class="input-group-text"><b>Improvement:</b>&ensp;<%= student[0].ADRI4 %></span>
                     <div class="col-sm"> 
                         <div class="card-body shadow rounded">
                             <textarea style="height: 100%" class="form-control" name="code" rows="5" ><%= student[0].expResult17%></textarea>
                             <br>
                         </div>
-                        <input class="form-check-input" style="width: 100px; height: 40px;" type="number" min="0" max="3" step="0.5" name="studentScore4" id="studentScore" value="" placeholder="ข้อ 19.1">
+                        <input class="form-check-input" style="width: 100px; height: 40px;" type="number" min="0" max="10" step="0.5" name="studentScore4" id="studentScore" value="" placeholder="10 คะแนน">
                     </div>
           
 
