--- a/views/teacher/checkQuiz.ejs
+++ b/views/teacher/checkQuiz.ejs
@@ -40,7 +40,7 @@
     <link rel='stylesheet' href='stylesheets/home1.css' />
     <link rel='stylesheet' href='stylesheets/compiler_line.css' />
     <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.5.0/Chart.min.js"></script>
-    <title>Check</title>
+    <title>Project Quiz Check</title>
 </head>
 
 <body style="background-color: #cad19f;">
@@ -55,7 +55,7 @@
 
         <div class="row align-items-start">
             <div class="col-8">
-                <h1>Student answer</h1>
+                <h1>Project-Quiz answer</h1>
             </div>
         </div>
         
@@ -111,7 +111,7 @@
                                     <textarea style="height: 100%" class="form-control" name="code" rows="5" ><%= student[0].sendLink16%></textarea>
                                     <br>
                                 </div>
-                                <input class="form-check-input" style="width: 100px; height: 40px;" type="number" min="0" max="3" step="0.5" name="studentScore1" id="studentScore" value="" placeholder="30 คะแนน">
+                                <input class="form-check-input" style="width: 100px; height: 40px;" type="number" min="0" max="30" step="0.5" name="studentScore1" id="studentScore" value="" placeholder="30 คะแนน">
                             </div>
 
 
@@ -123,7 +123,7 @@
                                 <textarea style="height: 100%" class="form-control" name="code" rows="10" ><%= student[0].code%></textarea>
                                 <iframe src="https://www.programiz.com/c-programming/online-compiler/" width="100%" height="600px"></iframe> 
                             </div>
-                            <input class="form-check-input" style="width: 100px; height: 40px;" type="number" min="0" max="5" step="0.5" name="studentScore2" id="studentScore" value="" placeholder="50 คะแนน">
+                            <input class="form-check-input" style="width: 100px; height: 40px;" type="number" min="0" max="50" step="0.5" name="studentScore2" id="studentScore" value="" placeholder="50 คะแนน">
                         </div>
  
 
@@ -135,7 +135,7 @@
                             <textarea style="height: 100%" class="form-control" name="code" rows="5" ><%= student[0].expResult16%></textarea>
                             <br>
                         </div>
-                        <input class="form-check-input" style="width: 100px; height: 40px;" type="number" min="0" max="1" step="0.5" name="studentScore3" id="studentScore" value="" placeholder="10 คะแนน">
+                        <input class="form-check-input" style="width: 100px; height: 40px;" type="number" min="0" max="10" step="0.5" name="studentScore3" id="studentScore" value="" placeholder="10 คะแนน">
                     </div>
     
 
@@ -147,7 +147,7 @@
                             <textarea style="height: 100%" class="form-control" name="code" rows="5" ><%= student[0].expResult17%></textarea>
                             <br>
                         </div>
-                        <input class="form-check-input" style="width: 100px; height: 40px;" type="number" min="0" max="1" step="0.5" name="studentScore4" id="studentScore" value="" placeholder="10 คะแนน">
+                        <input class="form-check-input" style="width: 100px; height: 40px;" type="number" min="0" max="10" step="0.5" name="studentScore4" id="studentScore" value="" placeholder="10 คะแนน">
                     </div>
           
 
