--- a/views/student/layouts/course-middle_Score.ejs
+++ b/views/student/layouts/course-middle_Score.ejs
@@ -116,7 +116,7 @@ else {
                     checkedLV4 = "-"
                 }
                 TeacherCheck = "รอตรวจ";
-                bgColor = "background-color: #ed9769;"
+                bgColor = "background-color: #ffd75e;"
             }
         }
 
