--- a/views/index/index_student.ejs
+++ b/views/index/index_student.ejs
@@ -87,16 +87,17 @@
                                 <path d="M432 256c0 17.69-14.33 32.01-32 32.01H256v144c0 17.69-14.33 31.99-32 31.99s-32-14.3-32-31.99v-144H48c-17.67 0-32-14.32-32-32.01s14.33-31.99 32-31.99H192v-144c0-17.69 14.33-32.01 32-32.01s32 14.32 32 32.01v144h144C417.7 224 432 238.3 432 256z"/>
                                 </svg><b> Change Class</b>
                             </button>
-                            <% } else{ %>  
-                            <b>คลิกเพื่อเข้าร่วม Class</b><br>
+                    <br>
+                    <p>ติดต่ออาจารย์ผู้สอน : <a href="mailto:result[0].teacher"> <%= result[0].teacher%></a></p>
+                    <% } else{ %>  
+                        <b>คลิกเพื่อเข้าร่วม Class</b><br>
                             <button type="button" class="btn btn-outline-dark btn-sm" data-bs-toggle="modal" data-bs-target="#Classjoin" style="background-color: #ffffff;" >
                                 <svg width="17.5" height="20" style="font-size: 20px;;align-items: center;" viewBox="0 0 448 512">
                                 <path d="M432 256c0 17.69-14.33 32.01-32 32.01H256v144c0 17.69-14.33 31.99-32 31.99s-32-14.3-32-31.99v-144H48c-17.67 0-32-14.32-32-32.01s14.33-31.99 32-31.99H192v-144c0-17.69 14.33-32.01 32-32.01s32 14.32 32 32.01v144h144C417.7 224 432 238.3 432 256z"/>
                                 </svg><b> Join Class</b>
                             </button>
                             
-                        <% } %> <br><br>
-                        <p>ติดต่ออาจารย์ผู้สอน : <a href="mailto:<%= result[0].teacher %>"><%= result[0].teacherName %></a></p>
+                    <% } %> <br><br>
                 </div>    
 
                 <div class="item1" style="width: auto;">
