--- a/views/index/index_student.ejs
+++ b/views/index/index_student.ejs
@@ -474,7 +474,7 @@
 
                                 <!-- e -->
                                 <% if(ExplainPercent > BasicPercent && ExplainPercent > TracePercent && ExplainPercent > WritePercent){ %>
-                                    <img src="https://cdn-icons-png.flaticon.com/256/15547/15547871.png" alt="" style="margin: 20px; width: 150px;">
+                                    <img src="/public/images/IMG_3171.webp" alt="Knowledge" style="margin: 20px; width: 150px;">
                                     <br> e
                                 <% } %> 
                                 <% if(ExplainPercent > BasicPercent && ExplainPercent > TracePercent && ExplainPercent === WritePercent){ %>
