--- a/views/index/index_student.ejs
+++ b/views/index/index_student.ejs
@@ -474,20 +474,20 @@
 
                                 <!-- e -->
                                 <% if(ExplainPercent > BasicPercent && ExplainPercent > TracePercent && ExplainPercent > WritePercent){ %>
-                                    <img src="/public/images/IMG_3171.webp" alt="Knowledge" style="margin: 20px; width: 150px;">
+                                    <img src="/images/IMG_3171.webp" alt="Knowledge" style=" width: 200px; height: 200px;">
                                     <br> e
-                                <% } %> 
+                                <% } %>
                                 <% if(ExplainPercent > BasicPercent && ExplainPercent > TracePercent && ExplainPercent === WritePercent){ %>
                                     e = w
-                                <% } %> 
+                                <% } %>
 
                                 <!-- w -->
                                 <% if(WritePercent > BasicPercent && WritePercent > TracePercent && WritePercent > ExplainPercent){ %>
                                     w
-                                <% } %> 
+                                <% } %>
                                 <% if(WritePercent === BasicPercent && WritePercent === TracePercent && WritePercent === ExplainPercent){ %>
                                     k = t = e = w
-                                <% } %>  
+                                <% } %>
                                 <% } %>
                             </div>
                         </div>
