--- a/views/index/index_student.ejs
+++ b/views/index/index_student.ejs
@@ -54,7 +54,6 @@
             border-radius: 10px;
             display: block;
             text-align: center;
-            padding-top: 40px;
         }
     </style>
 
@@ -474,8 +473,9 @@
 
                                 <!-- e -->
                                 <% if(ExplainPercent > BasicPercent && ExplainPercent > TracePercent && ExplainPercent > WritePercent){ %>
-                                    <img src="/images/IMG_3171.webp" alt="Knowledge" style=" width: 200px; height: 200px;">
-                                    <br> e
+                                    <img src="/images/IMG_3239.png" alt="Knowledge" style=" width: 200px; height: 200px;">
+                                    <p style="margin-bottom: 0px;"><b>EX</b>
+                                    <p>Explaining + Knowledge</p>
                                 <% } %>
                                 <% if(ExplainPercent > BasicPercent && ExplainPercent > TracePercent && ExplainPercent === WritePercent){ %>
                                     e = w
